[gd_scene load_steps=3 format=2]

[ext_resource path="res://Styles/style1.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/modalWindows/levelContainerContextButtons.gd" type="Script" id=2]

[node name="Main" type="Node2D" groups=["tempWindow"]]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_left = 1.0
margin_right = 301.0
margin_bottom = 93.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.505882, 0.505882, 0.505882, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
margin_right = 300.0
margin_bottom = 86.0
rect_min_size = Vector2( 300, 0 )
mouse_filter = 0
theme = ExtResource( 1 )

[node name="DeleteLevelBtn" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 26.0
text = "Delete Level"

[node name="AddLevelBtn" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 30.0
margin_right = 300.0
margin_bottom = 56.0
text = "Add Level"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 60.0
margin_right = 300.0
margin_bottom = 86.0

[node name="loadImageOptionBga" type="OptionButton" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_right = 105.0
margin_bottom = 26.0
theme = ExtResource( 1 )
text = "Map mode"
items = [ "Map mode", null, false, 0, null, "Image mode", null, false, 1, null ]
selected = 0

[node name="ChangeBgaBtn" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_left = 109.0
margin_right = 264.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Change Bga"

[node name="DeleteBgaBtn" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_left = 268.0
margin_right = 300.0
margin_bottom = 26.0
text = " X "

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 90.0
margin_right = 300.0
margin_bottom = 116.0

[node name="loadImageOptionBgb" type="OptionButton" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
margin_right = 105.0
margin_bottom = 26.0
theme = ExtResource( 1 )
text = "Map mode"
items = [ "Map mode", null, false, 0, null, "Image mode", null, false, 1, null ]
selected = 0

[node name="ChangeBgbBtn" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
margin_left = 109.0
margin_right = 264.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Change Bgb"

[node name="DeleteBgbBtn" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
margin_left = 268.0
margin_right = 300.0
margin_bottom = 26.0
text = " X "

[node name="MessagePacksBtn" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 120.0
margin_right = 300.0
margin_bottom = 146.0
text = "Message Packs"

[node name="LevelSettingsBtn" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 150.0
margin_right = 300.0
margin_bottom = 176.0
text = "Level Settings"

[node name="LocalVariablesBtn2" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 180.0
margin_right = 300.0
margin_bottom = 206.0
text = "Local Variables"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="LoadBGFile" type="FileDialog" parent="CanvasLayer2"]
margin_left = 237.0
margin_top = 142.0
margin_right = 664.0
margin_bottom = 413.0
window_title = "Открыть файл"
mode = 0
access = 2
filters = PoolStringArray( "*.png", "*.bmp" )

[connection signal="pressed" from="CanvasLayer/VBoxContainer/DeleteLevelBtn" to="." method="_on_DeleteLevelBtn_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/AddLevelBtn" to="." method="_on_AddLevelBtn_pressed"]
[connection signal="item_selected" from="CanvasLayer/VBoxContainer/HBoxContainer/loadImageOptionBga" to="." method="_on_loadImageOptionBga_item_selected"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/ChangeBgaBtn" to="." method="_on_ChangeBgaBtn_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/DeleteBgaBtn" to="." method="_on_DeleteBgaBtn_pressed"]
[connection signal="item_selected" from="CanvasLayer/VBoxContainer/HBoxContainer2/loadImageOptionBgb" to="." method="_on_loadImageOptionBgb_item_selected"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer2/ChangeBgbBtn" to="." method="_on_ChangeBgbBtn_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer2/DeleteBgbBtn" to="." method="_on_DeleteBgbBtn_pressed"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer/MessagePacksBtn" to="." method="_on_MessagePacksBtn_button_down"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer/LevelSettingsBtn" to="." method="_on_LevelSettingsBtn_button_down"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer/LocalVariablesBtn2" to="." method="_on_LocalVariablesBtn2_button_down"]
[connection signal="file_selected" from="CanvasLayer2/LoadBGFile" to="." method="_on_LoadBGFile_file_selected"]
